--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/test-utils": "^3.19.2",
     "eslint": "^9.31.0",
     "nuxt": "^4.0.0",
+    "nuxt-lucide-icons": "^1.0.5",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
