--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "sass": "^1.89.2",
     "vite-plugin-vuetify": "^2.1.1",
     "vuetify": "^3.9.0"
   }
