--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/test-utils": "^3.19.2",
     "@pinia/nuxt": "^0.11.1",
     "eslint": "^9.31.0",
+    "moment": "^2.30.1",
     "nuxt": "^4.0.0",
     "nuxt-lucide-icons": "^1.0.5",
     "pinia": "^3.0.3",
@@ -24,6 +25,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/moment": "^2.11.29",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
     "vite-plugin-vuetify": "^2.1.1",
